; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bridgestp.c_bstp_enqueue.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_bridgestp.c_bstp_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }
%struct.mbuf = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@M_PROTO1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifnet*, %struct.mbuf*)* @bstp_enqueue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bstp_enqueue(%struct.ifnet* %0, %struct.mbuf* %1) #0 {
  %3 = alloca %struct.ifnet*, align 8
  %4 = alloca %struct.mbuf*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.ifnet* %0, %struct.ifnet** %3, align 8
  store %struct.mbuf* %1, %struct.mbuf** %4, align 8
  store i64 0, i64* %5, align 8
  %7 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %8 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* @M_PROTO1, align 4
  %12 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %13 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = or i32 %14, %11
  store i32 %15, i32* %13, align 4
  %16 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %17 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %18 = call i64 @ifnet_output_raw(%struct.ifnet* %16, i32 0, %struct.mbuf* %17)
  store i64 %18, i64* %5, align 8
  %19 = load i64, i64* %5, align 8
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %2
  %22 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @ifnet_stat_increment_out(%struct.ifnet* %22, i32 1, i32 %23, i32 0)
  br label %28

25:                                               ; preds = %2
  %26 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %27 = call i32 @ifnet_stat_increment_out(%struct.ifnet* %26, i32 0, i32 0, i32 1)
  br label %28

28:                                               ; preds = %25, %21
  ret void
}

declare dso_local i64 @ifnet_output_raw(%struct.ifnet*, i32, %struct.mbuf*) #1

declare dso_local i32 @ifnet_stat_increment_out(%struct.ifnet*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
